--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,23 @@
 @import 'libs/bootstrap-reboot.min';
 @import 'libs/fonts';
 
+@import 'base/variables';
+@import 'base/mixins';
+
 * {
     font-family: "Playfair Display", serif;
     margin: 0;
     padding: 0;
 }
+
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
+
+@import 'blocks/header';
+@import 'blocks/promo';
+@import 'blocks/buttons';
+@import 'blocks/titles';
+@import 'blocks/welcome';
+@import 'blocks/popular';
