--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,4 +1,4 @@
-.welcome {
+.about {
     padding: 80px 0;
     &__wrapper {
         display: grid;
@@ -10,6 +10,7 @@
         height: 100%;
         object-fit: cover;
         filter: brightness(.9);
+        border-radius: 10px;
     }
     &__text {
         margin-top: 20px;
