--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,6 +1,6 @@
 .button {
     margin-top: 34px;
-    width: 183px;
+    width: 150px;
     height: 46px;
     background-color: $main-color;
     font-weight: 700;
@@ -17,7 +17,11 @@
         width: 110px;
         height: 36px;
         margin: 0;
-        border-radius: 5px;
+        border-radius: 10px;
         font-size: 14px;
+    }
+    &_submit {
+        margin-top: 20px;
+        width: 157px;
     }
 }
