--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,6 +1,15 @@
 .header {
-    display: flex;
-    justify-content: space-between;
+    padding: 40px 0;
+    background-color: $bg-color;
+    background: url('../img/main_bg.jpg') no-repeat top / cover;
+    &_main {
+        background: none;
+    }
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
     &__logo {
         text-decoration: none;
         color: #000;
@@ -10,19 +19,27 @@
         justify-content: space-between;
         width: 570px;
         list-style-type: none;
+        margin: 0;
     }
     &__link {
         a {
             text-decoration: none;
             color: #000;
             font-size: 18px;
-            box-shadow: inset 0 0 0 0 $main-color;
-            padding: 2px 7px 4px 7px;
-            transition: color .3s ease-in-out, box-shadow .4s ease-in-out;
-            border-radius: 5px;
-            &:hover {
-                box-shadow: inset 100px 0 0 0 $main-color;
-                color: white;
+            font-weight: 500;
+        }
+        &:after {
+            content: '';
+            display: block;
+            background-color: $main-color;
+            height: 2px;
+            width: 0%;
+            border-radius: 3px;
+            transition: .3s;
+        }
+        &:hover {
+            &:after {
+                width: 100%
             }
         }
     }
