--- a/src/sass/blocks/_services.scss
+++ b/src/sass/blocks/_services.scss
@@ -1,9 +1,12 @@
-.popular {
+.services {
     padding: 80px 0;
-    background-color: #fffeee;
+    background: url('../img/main_bg.jpg') center (center/cover) no-repeat;
+    &_white {
+        background: none;
+        background-color: #fff;
+    }
     &__wrapper {
         display: grid;
-        margin-top: 80px;
         grid-template-columns: repeat(3, 300px);
         grid-auto-rows: minmax(445px, auto);
         justify-content: space-between;
@@ -13,10 +16,11 @@
         background-color: #fff;
         width: 300px;
         filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, .30));
+        border-radius: 10px;
         hr {
             margin: 0 auto;
             width: 80%;
-            background-color: #dedede;
+            background-color: #aeaeae;
             border: none;
             height: 1px;
         }
@@ -26,6 +30,7 @@
         height: 200px;
         object-fit: cover;
         filter: brightness(.9);
+        border-radius: 10px 10px 0 0;
     }
     &__descr {
         padding: 20px;
