Step 4. Finished website adaptation for mobile devices

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,6 +1,9 @@
 .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 34px;
-    width: 150px;
+    width: 140px;
     height: 46px;
     background-color: $main-color;
     font-weight: 700;
@@ -10,6 +13,8 @@
     font-size: 15px;
     padding-bottom: 1px;
     transition: .3s all;
+    cursor: pointer;
+    text-decoration: none;
     &:hover {
         background-color: #942028;
     }
@@ -22,6 +27,18 @@
     }
     &_submit {
         margin-top: 20px;
-        width: 157px;
+    }
+    &_about {
+        margin: 15px 15px 0 0;
+        width: 130px;
+    }
+    &_ask {
+        background-color: #fff;
+        color: #000;
+        border: 2px solid $main-color;
+        &:hover {
+            background-color: #942028;
+            color: #fff;
+        }
     }
 }
