--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -33,7 +33,7 @@
         border-radius: 10px;
         border: none;
     }
-    &__policy {
+    &__privacy {
         display: flex;
         align-items: center;
         color: #fff;
