--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -3,7 +3,11 @@
     &__wrapper {
         display: grid;
         grid-template-columns: 490px 570px;
-        justify-content: space-between;
+        column-gap: 50px;
+    }
+    &__subheader {
+        font-size: 21px;
+        font-weight: 700;
     }
     &__img {
         width: 100%;
@@ -11,14 +15,56 @@
         object-fit: cover;
         filter: brightness(.9);
         border-radius: 10px;
+        &_me {
+            height: 465px;
+        }
     }
     &__text {
         margin-top: 20px;
-        font-size: 20px;
+        font-size: 19px;
         p {
             &:nth-child(3) {
                 margin: 0;
             }
         }
+        &_me {
+            p {
+                &:nth-child(3) {
+                    margin-bottom: 1rem;
+                }
+            }
+        }
+    }
+    &__list {
+        font-size: 19px;
+    }
+    &__footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin-top: 35px;
+    }
+    &__getting {
+        margin-top: 1rem;
+        grid-column: 2/3;
+    }
+    &__list {
+        margin: 0;
+    }
+    &__price {
+        font-size: 19px;
+        font-weight: 700;
+        p {
+            margin: 0;
+            span {
+                font-family: "Orchidea Pro", sans-serif;
+            }
+        }
+    }
+    &__btn-wrapper {
+        display: flex;
     }
 }
