--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -13,6 +13,9 @@
     &__logo {
         text-decoration: none;
         color: #000;
+        img {
+            width: 120px;
+        }
     }
     &__menu {
         display: flex;
