--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,7 +13,7 @@
 
 .container {
     position: relative;
-    width: 1140px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
@@ -27,4 +27,8 @@
 @import 'blocks/form';
 @import 'blocks/gallery';
 @import 'blocks/contacts';
+@import 'blocks/modal';
+@import 'blocks/privacy';
 @import 'blocks/footer';
+@import 'blocks/menu';
+@import 'blocks/media';
